# healthkathon-bpjs

./: .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
artifacts/graphs/: centrality_measures.csv
artifacts/label_encoders/: label_encoder_HCPCS_Cd.pkl  label_encoder_Rndrng_Prvdr_Type.pkl
artifacts/models/: xgb_model.pkl
notebooks/: exploration with graph.ipynb  exploration.ipynb  fraud-detection fix.ipynb
src/: __init__.py  config.py
src/api/: endpoints.py  middleware.py  models.py
src/data/: preprocessing.py
src/models/: graph_features.py  predictor.py
src/ui/: app.py
src/ui/components/: forms.py  plots.py
src/ui/pages/: batch.py  dashboard.py  home.py
