[project]
name = "healthkathon-bpjs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.4",
    "flake8>=7.1.1",
    "mlflow>=2.17.2",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pre-commit>=4.0.1",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "redis>=5.2.0",
    "scikit-learn>=1.5.2",
    "shap>=0.46.0",
    "streamlit>=1.39.0",
    "uvicorn>=0.32.0",
    "xgboost>=2.1.2",
]
